--- a/style.css
+++ b/style.css
@@ -11,6 +11,8 @@ html {
 	--color-ref-raspberry: #6e1732;
 	--color-ref-sunlight: #dab927;
 	--color-ref-brass: #645c11;
+	--color-ref-orange: #c25e00;
+	--color-ref-highlighter: #eeff00;
 
 	--color-ref-release-core: #960303;
 	--color-ref-release-hot: #008d00;
@@ -35,6 +37,7 @@ body {
 	--color-sys-accent-1-intense: var(--color-ref-blue);
 	--color-sys-accent-2-muted: var(--color-ref-pink);
 	--color-sys-accent-2-intense: var(--color-ref-raspberry);
+	--color-sys-state-warning: var(--color-ref-orange);
 	font-family: "Noto Sans", sans-serif;
 	font-optical-sizing: auto;
 	font-weight: 400;
@@ -54,6 +57,7 @@ body {
 		--color-sys-accent-2-intense: var(--color-ref-pink); */
 		--color-sys-accent-2-muted: var(--color-ref-brass);
 		--color-sys-accent-2-intense: var(--color-ref-sunlight);
+		--color-sys-state-warning: var(--color-ref-highlighter);
 	}
 }
 
@@ -63,6 +67,23 @@ body {
 
 .material-symbols-outlined.sm {
 	font-size: 1rem;
+}
+
+.material-icon-before::before,
+.material-icon-after::after {
+	content: attr(icon-name);
+	font-family: "Material Symbols Outlined";
+	font-weight: normal;
+	font-style: normal;
+	line-height: 1;
+	letter-spacing: normal;
+	text-transform: none;
+	display: inline-block;
+	white-space: nowrap;
+	word-wrap: normal;
+	direction: ltr;
+	-webkit-font-smoothing: antialiased;
+	vertical-align: -0.2em;
 }
 
 button {
@@ -102,6 +123,10 @@ button {
 
 .icon-button {
 	line-height: 1;
+}
+
+.warning {
+	color: var(--color-sys-state-warning);
 }
 
 .layout {
@@ -452,6 +477,10 @@ input[type="number"] {
 	& .title {
 		grid-area: title;
 		font-weight: 700;
+
+		&::before {
+			margin-inline-end: 0.25em;
+		}
 	}
 
 	& > [x-text="meta.waypoint"] {
@@ -459,9 +488,13 @@ input[type="number"] {
 		margin-inline-start: 0.25rem;
 	}
 
-	& > [x-text="meta.time"] {
+	& > .time {
 		grid-area: time;
 		font-style: italic;
+
+		&.desc {
+			text-decoration: dotted underline;
+		}
 	}
 
 	& > .durations {
