--- a/style.css
+++ b/style.css
@@ -156,6 +156,11 @@ input[type="number"] {
 	font: inherit;
 }
 
+select {
+	min-height: calc(1.25em + 0.5rem);
+	font-size: inherit;
+}
+
 [x-data="gw2MetaPlanner"] {
 	& > header {
 		border-bottom: 2px solid var(--color-sys-fg);
