--- a/src/style.css
+++ b/src/style.css
@@ -182,7 +182,6 @@ body {
 				var(--mp-grid--outer-gutter)
 		);
 		border-top: 2px solid var(--mp-color-sys--accent-1-intense);
-		opacity: 0.7;
 		filter: drop-shadow(0 0 0.25rem var(--mp-color-sys--accent-1-intense));
 
 		& > .mp-clock {
@@ -315,17 +314,32 @@ body {
 
 .mp-event__waypoint {
 	grid-area: waypoint;
+	justify-self: center;
 	margin-inline-start: var(--mp-event--gap);
 	appearance: none;
 	border: none;
 	background: transparent;
-	width: 1rem;
-	height: 1rem;
-	background-color: blue;
+	width: 2rem;
+	height: 2rem;
+	background-image: url("./images/icons/waypoint-off.svg");
+	background-size: 100% 100%;
+	background-position: center;
+	background-repeat: no-repeat;
+	cursor: pointer;
+
+	&:hover,
+	&:focus-visible {
+		background-image: url("./images/icons/waypoint-on.svg");
+	}
+
+	&:active {
+		transform: scale(0.9);
+	}
 }
 
 .mp-event__times {
 	grid-area: times;
+	align-self: center;
 	padding: var(--mp-event--gap);
 }
 
@@ -333,6 +347,7 @@ body {
 	display: flex;
 	gap: var(--mp-event--gap);
 	justify-content: space-between;
+	text-align: center;
 
 	& dt {
 		margin-block-end: 0.125rem;
