--- a/src/style.css
+++ b/src/style.css
@@ -212,7 +212,9 @@ body {
 			grid-column: -3;
 			position: sticky;
 			right: calc(var(--mp-grid--column-width) + var(--mp-grid--gap-length));
-			margin-inline-start: 0.25rem;
+			margin-inline-end: 0.25rem;
+			margin-block-start: -0.125rem;
+			margin-block-end: -0.375rem;
 			background-color: var(--mp-color-sys--accent-1-intense);
 			color: var(--mp-color-sys--bg);
 			justify-self: end;
@@ -220,7 +222,7 @@ body {
 			display: flex;
 			justify-content: center;
 			align-items: center;
-			padding: 0.125rem 0.25rem;
+			padding: 0 0.25rem;
 		}
 	}
 }
